[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Tzu-ping Chung"
author-email = "Tzu-ping Chung <uranusjr@gmail.com>"
description-file = "README.md"

home-page = "https://github.com/uranusjr/ouo"
license = "ISC"

module = "ouo"
requires-python = ">=3.6"
requires = [
    "appdirs",
    "dataclasses; python_version < '3.7'",
    "importlib-metadata; python_version < '3.8'",
    "packaging",
    "packaging-dists",
]

[tool.flit.metadata.requires-extra]
compat = ["virtualenv >=20.0.3"]
test = ["pytest"]

[tool.flit.scripts]
pyem = "ouo:main"

[tool.black]
line-length = 79
target_version = ["py36"]
include = '^/(src|tests)/.+\.py$'
